# Medley

./: .gitignore  CMakeLists.txt  Makefile  README.md  Resources.qrc
src/: Hatchet.cpp  Medley.cpp
src/audio/: Player.cpp  Player.h
src/interface/: MedleyUI.cpp  MedleyUI.h  MedleyUI.ui
src/sound/: Player.cpp  Player.h  test.cpp
src/streaming/sources/: source.cpp  source.h
